# AnalytixPro

./: .gitignore  .replit  AGENT_BACKUP.md  API_KEY_SETUP.md  BACKUP_INFO.md  DEPLOYMENT.md  DOWNLOAD.md  INSTALL.md  README.md  SETUP.md  app.py  demo_data.xlsx  demo_dirty_data.csv  packages.txt  pyproject.toml  replit.md  requirements.txt  run.py
assets/: dark_mode.css  modern.css
attached_assets/: _1754121109179.replit  app_1754121109180.py  demo_data_1754121109180.csv  pyproject_1754121109181.toml  replit_1754121109181.md
modules/: __init__.py  ai_assistant_gemini.py  chart_gen.py  data_cleaning.py  eda.py  export.py  gemini_live.py  query_parser.py  voice_handler.py
